<resources>
    <string name="dua_app_name">DuaSdk</string>
    <string name="dua_prompt_tel">手机号</string>
    <string name="dua_prompt_pwd">密码</string>
    <string name="dua_prompt_repwd">请再输入一次密码</string>
    <string name="dua_prompt_vf_code">验证码</string>
    <string name="dua_button_get_vf_code">获取验证码</string>
    <string name="dua_button_last_step">上一步</string>
    <string name="dua_button_next_step">下一步</string>
    <string name="dua_button_complete">完成</string>
    <string name="dua_action_sign_in">登录</string>
    <string name="dua_action_sign_up">注册</string>
    <string name="dua_action_ensure">确定</string>
    <string name="dua_action_forget_pwd">忘记密码</string>
    <string name="dua_prompt_sex">性别</string>
    <string name="dua_button_pick">选择</string>
    <string name="dua_prompt_birthday">生日</string>
</resources>
