<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DuaFragmentRegister">
    <net.rimoto.intlphoneinput.IntlPhoneInput
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dua_register_input_phone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/dua_prompt_vf_code"
            android:id="@+id/dua_register_input_vf_code" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dua_button_get_vf_code"
            android:id="@+id/dua_register_button_get_vf_code"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dua_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/dua_prompt_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp" />

        <!--<TextView-->
            <!--android:id="@+id/dua_tv_password"-->
            <!--android:layout_width="90dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignLeft="@id/dua_et_password"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:text="密码"-->
            <!--android:textColor="#353535"-->
            <!--android:textSize="16sp" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_hide"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/agt" />

            <ImageView
                android:id="@+id/iv_show"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:padding="10dp"
                android:src="@drawable/agu"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
    <!--<EditText-->
        <!--android:id="@+id/dua_register_input_pwd"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/dua_prompt_pwd"-->
        <!--android:imeOptions="actionUnspecified"-->
        <!--android:inputType="textPassword"-->
        <!--android:maxLines="1"-->
        <!--android:singleLine="true" />-->

    <!--<EditText-->
        <!--android:id="@+id/dua_register_input_repwd"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/dua_prompt_repwd"-->
        <!--android:imeActionId="@+id/dua_action_ime_ensure"-->
        <!--android:imeActionLabel="@string/dua_action_ensure"-->
        <!--android:imeOptions="actionUnspecified"-->
        <!--android:inputType="textPassword"-->
        <!--android:maxLines="1"-->
        <!--android:singleLine="true" />-->

    <Button
        android:id="@+id/dua_register_button_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dua_button_next_step"
        android:textStyle="bold" />
</LinearLayout>
